--- a/teacher/web/css/style.css
+++ b/teacher/web/css/style.css
@@ -7356,7 +7356,7 @@ ul.mc_parent_list ul.mc_child_list:hover .pricing_btn{
 } 
 .dashboard_sidebar{
   bottom: 0;
-  margin-top: 60px;
+  margin-top: 30px;
   left: 0;
   position: absolute;
   max-width: 250px;
@@ -12006,4 +12006,7 @@ textarea.form-control{
 }
 #video-video_description {
   resize:none;
+}
+.dashboard_sidebars{
+  height: 100vh;
 }
