--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -88,3 +88,7 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+.form-group
+{
+    margin-bottom: 20px!important;
+}
