Playlist Course almashtirildi. Qolgan narsalarga fixed qilindi.

--- a/teacher/web/css/style.css
+++ b/teacher/web/css/style.css
@@ -12015,14 +12015,14 @@ textarea.form-control{
   min-width: 200px;
 }
 
-#w0 .card {
+#w0 .card,.view-card .card {
   cursor: pointer;
   box-shadow: 0 1rem 2rem hsl(0 0% 0% / 20%);
   transition: all .5s linear;
   min-height: 450px;
 }
-#w0 .card:hover {
-  box-shadow: 0 0 25px -5px #090846;
+#w0 .card:hover,.view-card .card:hover {
+  box-shadow: 0 0 25px -5px #094600;
 }
 .card-buttons {
   width: 100%;
