--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -88,3 +88,6 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+#popular_course_item .owl-stage {
+    transition: all 1s ease!important;
+}
